<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dialog_copy_data">Copy</string>
    <string name="dialog_android_id">Copy Android ID to clipboard</string>
    <string name="dialog_done">Done</string>
    <string name="app_name">Parser</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="call_number_description">Call Number</string>
    <string name="hello_world">Hello World!</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find Contacts</string>

    <!--
         Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll.
    -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--
         When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
    -->
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="action_settings">Settings</string>
    <string name="buttonContactProviderQueryText">Contact Query</string>
    <string name="buttonContactProviderLoaderText">Contact Loader</string>
    <string name="buttonMediaProviderText">Media</string>
    <string name="buttonForListOfProvidersText">List of Providers</string>
    <string name="toggleButtonContactAccessText">Contact Access Policy</string>
    <string name="toggleButtonMediaAccessText">Media Access Policy</string>
    <string name="toggleButtonImageAccessText">Image Access Policy</string>
    <string name="toggleButtonVideoAccessText">video Access Policy</string>
    <string name="toggleButtonAudioAccessText">Audio Access Policy</string>
    <string name="imageDescription">An image displayed from phone gallery</string>
    <string name="buttonImageProviderText">Image</string>
    <string name="buttonVideoProviderText">Video</string>
    <string name="buttonAudioProviderText">Audio</string>
    <string name="btnTxtAndroidId">Android ID</string>
    <string name="btnTxtGetXPrivacyData">Get XPrivacy Data</string>
    <string name="btnTxtUseCOMMAND">Use COMMAND</string>
    <string name="btnTxtUseHeimdall">Use Heimdall</string>
    
    <string name="title_activity_media">Media Activity</string>
    <string name="title_activity_image">Image Activity</string>
    <string name="title_activity_video">Video Activity</string>
    <string name="title_activity_audio">Audio Activity</string>
    <string name="title_activity_main">Parser</string>
    <string name="title_activity_provider_main">Providers List</string>
    <string name="title_activity_alternate_main">Parser</string>
    <string name="title_contact_provider">Contact Provider Data</string>
    
</resources>