<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.umbc.cs.ebiquity.mithril.parserapp.alternate.MainActivity" >

    <TextView
        android:id="@+id/textViewMainDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/useCOMMANDButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewMainDisplay"
        android:text="@string/btnTxtUseCOMMAND" />

    <Button
        android:id="@+id/useHeimdallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/useCOMMANDButton"
        android:text="@string/btnTxtUseHeimdall" />

	<Button
        android:id="@+id/getXPrivacyDataButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/useHeimdallButton"
        android:text="@string/btnTxtGetXPrivacyData" />
    
    <ImageView
        android:id="@+id/heimdallImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/getXPrivacyDataButton"
        android:contentDescription="@string/imageDescription"
        android:src="@drawable/dummy" />

</RelativeLayout>